fix(OGC-1054): own HL7 listeners by saved connection